2006-03-20  Wolfgang Klinger <wk@plan2.net>

	* Fixed bug #608: Typolink for mounted pages from another domain

2006-03-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Corrections/adjustments to the htmlArea RTE extension (see details in local ChangeLog)

2006-03-18  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added constant TYPO3_copyright_year for login page and about module

2006-03-17  Bernhard Kraft  <kraftb@kraftb.at>

	* Added .us and .at flags to typo3/gfx/flags/

2006-03-17  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Fixed workspace related issues. More will follow Monday.

2006-03-16  Karsten Dambekalns <karsten@typo3.org>

	* EM: Fixed bugs #2787, #2785, #1807
	* EM: Extension list is now fetched automatically if it isn't available at all.
	* ADOdb extension: a fix regarding the MS SQL driver, fixed bug #2810, cleaned up ext_emconf.php

2006-03-16  Rene Fritz  <r.fritz@colorcube.de>

	* Fixed bug #2840: Related to: Enhanced MM handling in TCE for usage from foreign tables.

2006-03-15  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue 2860 in t3lib_sqlparser.

2006-03-15  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* !!! Implemented complete "flavouring" of FlexForm XML; Basically it doesn't affect anyone using xml2array() to extract FlexForm data but everyone who uses own XML parsers will have to modify them (after converting all XML). Basically the flavouring means that a tag like "<lDEF>, <lDA>" is rather represented with "<language index="lDEF">, <language index="lDA">".
	* !!! Cleaned up t3lib_flexformtools::traverseFlexFormXMLData() and related functions, generally I did many changes to this class. However I think no one is using it yet except me. Anyway, the changes were necessary since it was simply never cleaned up as it should have been, including the new cleanFlexFormXML() function.