@@ -1,3 +1,9 @@
+2006-03-20  Sebastian Kurfuerst  <sebastian@garbage-group.de>
+
+	* Reverted the patch "Double-checking of match-conditions" because it caused trouble
+	* Fixed bug #2767: wrong wraps for sitemap/menu elements in accessibility mode
+	* New Feature #2341: add headers for table CE (accessibility)
+
 2006-03-20  Wolfgang Klinger <wk@plan2.net>
 
 	* Fixed bug #608: Typolink for mounted pages from another domain
